--- a/frontend/src/app/pages/beneficiary/manage/manage.component.html
+++ b/frontend/src/app/pages/beneficiary/manage/manage.component.html
@@ -6,7 +6,7 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 *ngIf="mode == 1" class="mb-0">Visualización</h3>
+          <h3 *ngIf="mode == 1" class="mb-0">Visualizar</h3>
           <h3 *ngIf="mode == 2" class="mb-0">Crear</h3>
           <h3 *ngIf="mode == 3" class="mb-0">Actualizar</h3>
         </div>
@@ -16,11 +16,13 @@
               <div class="row">
                 <div class="col-4">Id:</div>
                 <div class="col-8">{{ beneficiary.id }}</div>
+
               </div>
               <div class="row">
                 <div class="col-4">Propietario:</div>
                 <div class="col-8">
-                  <select class="form-control" [(ngModel)]="beneficiary.owner_id" [disabled]="mode == 1" formControlName="owner_id">
+                  <select class="form-control" [(ngModel)]="beneficiary.owner_id" [disabled]="mode == 1"
+                    formControlName="owner_id">
                     <option *ngFor="let owner of owners" [value]="owner.id">{{ owner.name }}</option>
                   </select>
                 </div>
@@ -28,7 +30,8 @@
               <div class="row">
                 <div class="col-4">Cliente:</div>
                 <div class="col-8">
-                  <select class="form-control" [(ngModel)]="beneficiary.customer_id" [disabled]="mode == 1" formControlName="customer_id">
+                  <select class="form-control" [(ngModel)]="beneficiary.customer_id" [disabled]="mode == 1"
+                    formControlName="customer_id">
                     <option *ngFor="let customer of customers" [value]="customer.id">{{ customer.name }}</option>
                   </select>
                 </div>
@@ -36,8 +39,10 @@
               <div class="row">
                 <div class="col-4">Edad:</div>
                 <div class="col-8">
-                  <input type="text" class="form-control" [(ngModel)]="beneficiary.age" [disabled]="mode == 1" formControlName="age">
-                  <div *ngIf="theFormGroup.get('age').errors && (theFormGroup.get('age').dirty || theFormGroup.get('age').touched || trySend)">
+                  <input type="text" class="form-control" [(ngModel)]="beneficiary.age" [disabled]="mode == 1"
+                    formControlName="age">
+                  <div
+                    *ngIf="theFormGroup.get('age').errors && (theFormGroup.get('age').dirty || theFormGroup.get('age').touched || trySend)">
                     <strong *ngIf="theFormGroup.get('age').errors.required" class="msnError">Requerido</strong>
                     <strong *ngIf="theFormGroup.get('age').errors.minlength" class="msnError">Requerido</strong>
                   </div>
