--- a/frontend/src/app/pages/chat/manage/manage.component.html
+++ b/frontend/src/app/pages/chat/manage/manage.component.html
@@ -7,6 +7,9 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
+          <h3 *ngIf="mode == 1" class="mb-0">Visualizar</h3>
+          <h3 *ngIf="mode == 2" class="mb-0">Crear</h3>
+          <h3 *ngIf="mode == 3" class="mb-0">Actualizar</h3>
           <h3 class="mb-0">Icons</h3>
         </div>
         <div class="card-body">
