--- a/frontend/src/app/pages/room/manage/manage.component.html
+++ b/frontend/src/app/pages/room/manage/manage.component.html
@@ -1,5 +1,4 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-</div>
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8"></div>
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table -->
@@ -7,10 +6,62 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 class="mb-0">Icons</h3>
+          <h3 *ngIf="mode == 1" class="mb-0">Visualizar</h3>
+          <h3 *ngIf="mode == 2" class="mb-0">Crear</h3>
+          <h3 *ngIf="mode == 3" class="mb-0">Actualizar</h3>
         </div>
         <div class="card-body">
+          <form class="form" [formGroup]="theFormGroup">
+            <div class="container">
+              <div class="row">
+                <div class="col-4">Id:</div>
+                <div class="col-8">{{ room.id }}</div>
 
+              </div>
+              <div class="row">
+                <div class="col-4">Sala:</div>
+                <div class="col-8">
+                  <input type="text" class="form-control" [(ngModel)]="room.room_name" [disabled]="mode == 1"
+                         formControlName="room_name">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">Capacidad:</div>
+                <div class="col-8">
+                  <input type="text" class="form-control" [(ngModel)]="room.room_capacity" [disabled]="mode == 1"
+                         formControlName="room_capacity">
+                  <div
+                    *ngIf="theFormGroup.get('room_capacity').errors && (theFormGroup.get('room_capacity').dirty || theFormGroup.get('room_capacity').touched || trySend)">
+                    <strong *ngIf="theFormGroup.get('room_capacity').errors.required" class="msnError">Requerido</strong>
+                    <strong *ngIf="theFormGroup.get('room_capacity').errors.minlength" class="msnError">Requerido</strong>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">Facilities:</div>
+                <div class="col-8">
+                  <input type="text" class="form-control" [(ngModel)]="room.facilities" [disabled]="mode == 1"
+                         formControlName="facilities">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">Sede:</div>
+                <div class="col-8">
+                  <select class="form-control" [(ngModel)]="room.headquearter_id" [disabled]="mode == 1"
+                          formControlName="headquearter_id">
+                    <option *ngFor="let headquearter of headquearters" [value]="headquearter.id">{{ headquearter.name }}</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4"></div>
+                <div class="col-8">
+                  <button *ngIf="mode == 2" class="btn btn-primary btn-block" (click)="create()">Crear</button>
+                  <button *ngIf="mode == 3" class="btn btn-primary btn-block" (click)="update()">Actualizar</button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
