--- a/frontend/src/app/pages/user/manage/manage.component.html
+++ b/frontend/src/app/pages/user/manage/manage.component.html
@@ -1,5 +1,4 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-</div>
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8"></div>
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table -->
@@ -7,12 +6,51 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header bg-transparent">
-          <h3 class="mb-0">Icons</h3>
+          <h3 class="mb-0">Usuario</h3>
+          <h3 *ngIf="mode == 1" class="mb-0">Visualizar</h3>
+          <h3 *ngIf="mode == 2" class="mb-0">Crear</h3>
+          <h3 *ngIf="mode == 3" class="mb-0">Actualizar</h3>
         </div>
         <div class="card-body">
+          <form class="form" [formGroup]="theFormGroup">
+            <div class="container">
+              <div class="row">
+                <div class="col-4">Id:</div>
+                <div class="col-8">{{ user.id }}</div>
 
+              </div>
+              <div class="row">
+                <div class="col-4">Nombre:</div>
+                <div class="col-8">
+                  <input type="text" class="form-control" [(ngModel)]="user.name" [disabled]="mode == 1"
+                         formControlName="name">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">Email:</div>
+                <div class="col-8">
+                  <input type="text" class="form-control" [(ngModel)]="user.email" [disabled]="mode == 1"
+                         formControlName="email">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">Rol:</div>
+                <div class="col-8">
+                  <select class="form-control" [(ngModel)]="user.role_id" [disabled]="mode == 1"
+                          formControlName="role_id">
+                    <option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4"></div>
+                <div class="col-8">
+                  <button *ngIf="mode == 2" class="btn btn-primary btn-block" (click)="create()">Crear</button>
+                  <button *ngIf="mode == 3" class="btn btn-primary btn-block" (click)="update()">Actualizar</button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-  </div>
-</div>
